.archive/kubernetes/apps/external-secrets/external-secrets/stores/bitwarden/networkpolicy.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: bitwarden-cli
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: bitwarden-cli
      app.kubernetes.io/name: bitwarden-cli
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/instance: external-secrets
            app.kubernetes.io/name: external-secrets
            ## Namespace where external-secret lives. Can be removed if they're in the same namespace
            k8s:io.kubernetes.pod.namespace: external-secrets
